# Learning-OpenGL

./: .gitignore  CMakeLists.txt  LICENSE
assets/models/: Cottage_FREE.fbx
glad/include/glad/: gl.h
shaders/: fragment.glsl  mesh_fragment.glsl  obj_fragment.glsl  vertex.glsl
src/: camera.h  light.h  main.cpp  main_old.cpp  material.h  mesh.h  model.h  shader.cpp  shader.h  texture.cpp  texture.h
